# LocalSeek

./: .gitignore  CURRENT.md  TARGET.md  download_phi3.py  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/augt/localseek/: ExampleInstrumentedTest.kt  FaissPerformanceTest.kt  QueryProcessorInstrumentationTest.kt  SearchE2ETest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: reranker.onnx  tokenizer_config.json  vocab.txt
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/augt/localseek/: LocalSeekApplication.kt  MainActivity.kt  SearchApp.kt
app/src/main/java/com/augt/localseek/data/: AppDatabase.kt  BM25Result.kt  ChunkDao.kt  DocumentChunk.kt  DocumentDao.kt  DocumentEntity.kt  DocumentFts.kt  VectorConverter.kt  VectorResult.kt
app/src/main/java/com/augt/localseek/indexing/: DocumentParser.kt  FileIndexer.kt  IndexScheduler.kt  IndexWorker.kt  TextChunker.kt
app/src/main/java/com/augt/localseek/logging/: PerfMeasure.kt  PerformanceHistoryStore.kt  PerformanceLogger.kt
app/src/main/java/com/augt/localseek/ml/: BertTokenizer.kt  DenseEncoder.kt  VectorUtils.kt
app/src/main/java/com/augt/localseek/model/: SearchResult.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/augt/localseek/: ChunkerTest.kt  ExampleUnitTest.kt  Phase1ValidationTest.kt  Phase4FusionTest.kt
docs/: BUILD_LLAMA_CPP.md
eval/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+49 files in other folders)
